# check-mem

./: .gitmodules  Cargo.toml  Makefile
src/: main.rs
